gap fixed again

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 35px;
+  gap: 20px;
   flex: 1;
 }
 
@@ -128,9 +128,9 @@ html {
 .footer {
   display: flex;
   padding: 16px 0px;
+  position: fixed;
   justify-content: center;
   align-content: center;
-  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
